# esp32s3-SR-module

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  partitions.csv  sdkconfig  sdkconfig.old
.agents/skills/module-progress-eval/: SKILL.md
components/hardware_driver/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/hardware_driver/boards/esp32s3-custom/: bsp_board.c
components/hardware_driver/boards/include/: bsp_board.h  esp32s3_custom_board.h  esp32s3_custom_board_api.h
components/lockin_capstone/: lockin_capstone.eez-project  lockin_capstone.eez-project-ui-state
components/lockin_capstone/src/ui/: CMakeLists.txt  actions.h  screens.c  screens.h  vars.h
main/: CMakeLists.txt  app_logic.c  audio-sr.c  chime.c  connections.c  i2c_handlers.c  idf_component.yml  main.c  nvs-helper.c  screen_swipe.c  settings_manager.c  speech_commands_action.c  st7789.c
main/certs/: google_root_ca.pem
main/include/: app_logic.h  audio-sr.h  chime.h  connections.h  i2c_handlers.h  nvs_helper.h  pinout.h  screen_swipe.h  settings_manager.h  speech_commands_action.h  st7789.h  user-settings.h
test_harness/: CMakeLists.txt  main.c
